# Dr_PacMan

./: CMakeLists.txt  Collision_Tiles.cpp  Collision_Tiles.h  GameState.h  Ghost.cpp  Ghost.h  Ghost3.cpp  Ghost3.h  Help_File.cpp  Help_File.h  Load_Sprites.cpp  Load_Sprites.h  MenuState.cpp  MenuState.h  Object.cpp  Object.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  README.md  Tile_Map.cpp  Tile_Map.h  game.cpp  game.h  initialBack.cpp  initialBack.h  kidghost.cpp  kidghost.h  main.cpp
